EWL-4609 fix agenda date atom border width and tab jumping

--- a/styleguide/source/assets/scss/02-molecules/_agenda-table.scss
+++ b/styleguide/source/assets/scss/02-molecules/_agenda-table.scss
@@ -1,8 +1,6 @@
 .ama__table-agenda{
-  border-top: solid 3px $gray-50;
-  border-left: none;
-  border-bottom: none;
-  border-right: none;
+  border: 0;
+  border-top: solid 1px $gray-50;
   margin: 4px;
   width: auto;
 
